//
//  LibrorumClient.swift
//  librorum
//
//  gRPC client for communicating with librorum backend
//

import Foundation

// MARK: - Basic gRPC Client (Placeholder)
// TODO: Implement full gRPC integration when dependencies are added

class LibrorumClient {
    
    private var isConnected: Bool = false
    private var serverAddress: String = ""
    
    init() {}
    
    func connect(to address: String) async throws {
        self.serverAddress = address
        // TODO: Implement actual gRPC connection
        // For now, simulate connection delay
        try await Task.sleep(nanoseconds: 500_000_000) // 0.5 seconds
        self.isConnected = true
    }
    
    func disconnect() async {
        // TODO: Implement actual gRPC disconnection
        self.isConnected = false
        self.serverAddress = ""
    }
    
    func isHealthy() async -> Bool {
        // TODO: Implement actual health check
        return isConnected
    }
    
    func getSystemHealth() async throws -> SystemHealthData {
        guard isConnected else {
            throw LibrorumClientError.notConnected
        }
        
        // TODO: Implement actual gRPC call
        // For now, return mock data
        return SystemHealthData(
            totalStorage: 1000000000, // 1GB
            usedStorage: 250000000,   // 250MB
            availableStorage: 750000000, // 750MB
            totalFiles: 100,
            totalChunks: 500,
            networkLatency: 0.05,
            errorCount: 0,
            uptime: 3600, // 1 hour
            memoryUsage: 50000000, // 50MB
            cpuUsage: 15.5
        )
    }
    
    func getConnectedNodes() async throws -> [NodeInfo] {
        guard isConnected else {
            throw LibrorumClientError.notConnected
        }
        
        // TODO: Implement actual gRPC call
        // For now, return mock data
        return [
            NodeInfo(
                nodeId: "local.librorum.local",
                address: "localhost:50051",
                systemInfo: "macOS 14.0",
                status: .online,
                lastHeartbeat: Date(),
                connectionCount: 1,
                latency: 0.01,
                failureCount: 0,
                isOnline: true,
                discoveredAt: Date().addingTimeInterval(-3600)
            )
        ]
    }
    
    func addNode(address: String) async throws {
        guard isConnected else {
            throw LibrorumClientError.notConnected
        }
        
        // TODO: Implement actual gRPC call
        try await Task.sleep(nanoseconds: 100_000_000) // 0.1 seconds
    }
    
    func removeNode(nodeId: String) async throws {
        guard isConnected else {
            throw LibrorumClientError.notConnected
        }
        
        // TODO: Implement actual gRPC call
        try await Task.sleep(nanoseconds: 100_000_000) // 0.1 seconds
    }
    
    func heartbeat(nodeId: String) async throws -> HeartbeatResponse {
        guard isConnected else {
            throw LibrorumClientError.notConnected
        }
        
        // TODO: Implement actual gRPC call
        return HeartbeatResponse(
            nodeId: nodeId,
            address: serverAddress,
            systemInfo: "macOS 14.0",
            timestamp: Date(),
            status: true
        )
    }
}

// MARK: - Data Structures

struct SystemHealthData {
    let totalStorage: Int64
    let usedStorage: Int64
    let availableStorage: Int64
    let totalFiles: Int
    let totalChunks: Int
    let networkLatency: TimeInterval
    let errorCount: Int
    let uptime: TimeInterval
    let memoryUsage: Int64
    let cpuUsage: Double
}

struct HeartbeatResponse {
    let nodeId: String
    let address: String
    let systemInfo: String
    let timestamp: Date
    let status: Bool
}

// MARK: - Error Types

enum LibrorumClientError: LocalizedError, Equatable {
    case notConnected
    case connectionFailed(String)
    case requestFailed(String)
    case invalidResponse
    
    var errorDescription: String? {
        switch self {
        case .notConnected:
            return "gRPC client is not connected to server"
        case .connectionFailed(let message):
            return "Connection failed: \(message)"
        case .requestFailed(let message):
            return "Request failed: \(message)"
        case .invalidResponse:
            return "Invalid response from server"
        }
    }
}